# trustguard-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.mineru  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  settings.py
app/api/: answer.py  documents.py  health.py  ingest.py  knowledge_bases.py  ocr_review.py  search.py  sources.py
app/core/embedding/: client.py  profiles.py
app/core/generation/: __init__.py  answer_service.py  citation_validator.py  context_builder.py  llm_client.py  prompts.py
app/core/indexing/: opensearch_backfill.py  opensearch_indexer.py  qdrant_indexer.py  qdrant_mock.py  rebuild_search_indexes.py  rechunk_search_indexes.py
app/core/ingest/: chunker.py  compensator.py  errors.py  models.py  pipeline.py
app/core/ocr/: __init__.py  bailian_provider.py  custom_http_provider.py  errors.py  factory.py  none_provider.py  protocol.py  (+4 more)
app/domain/: __init__.py  answer.py  document.py  ingest.py  ocr.py  retrieval.py  worker.py
app/schemas/: answer.py  api.py  document.py  ingest.py  knowledge_base.py  search.py
app/stores/: blob_store.py  chunk_store.py  db.py  document_store.py  job_store.py  knowledge_base_migration.py  knowledge_base_store.py  local_storage.py  mineru_store.py  minio_blob_store.py  minio_client.py  minio_store.py  models.py  ocr_region_store.py  opensearch_store.py  outbox_store.py  qdrant_store.py  rabbitmq.py  redis_cache.py
app/workers/: consumer.py  eager.py  handlers.py  main.py  messages.py  publisher.py  recovery.py  run_ingest_job.py
doc/: from-zero-code-walkthrough.md  rag-platform-implementation-plan.md
docker/mysql-init.d/: 001_ingest.sql  001_init.sql  002_outbox.sql  003_ocr_regions.sql  004_knowledge_bases.sql
docs/: answer-generation.md  hybrid-search-report.md  hybrid-search-review.md  hybrid-search.md  ocr-and-multiformat-ingest.md  pdf-ingest-embedding-flow.md  project-code-logic.md  token-aware-chunking.md
evaluation/cybersecurity/: README.md  build_dataset.py  hard_source_data.json  run_answer_eval.py  run_retrieval_eval.py  source.json  source_data.json
frontend/: index.html
frontend/assets/: app.css  app.js
tests/: conftest.py  dynamic_test_report.md  pdf_fixtures.py  run_dynamic_tests.py  test_answer_api.py  test_answer_eval.py  test_answer_service.py  test_blob_deletion.py  test_chunk_store.py  test_chunker.py  test_citation_validator.py  test_compensator_consistency.py  test_context_builder.py  test_cybersecurity_dataset.py  test_document_deduplication.py  test_documents_crud.py  test_docx_ingest.py  test_embedding_client.py  test_embedding_metadata.py  test_embedding_profiles.py  test_filename_conflict.py  test_health.py  test_hybrid_search.py  test_ingest_docx_e2e.py  test_ingest_pdf_e2e.py  test_ingest_text_e2e.py  test_knowledge_bases.py  test_llm_client.py  test_mineru_extractor.py  test_minio_blob_store.py  test_multiformat_ingest.py  test_ocr_providers.py  test_pdf_extractor.py  test_pdf_ocr.py  test_publication_rollback.py  test_qdrant_delete.py  test_reranker.py  test_retrieval_eval.py  test_retrieval_resilience.py  test_search_filters.py  (+3 more)
(+33 files in other folders)
