[project]
name = "trustguard-rag"
version = "0.1.0"
description = "TrustGuard 独立 RAG 平台：采集 / 入库 / 混合检索 / rerank / 引用"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27", "ruff>=0.4", "aiosqlite>=0.20"]
local-embedding = [
    "sentence-transformers>=3.0",
    "transformers>=4.51.0",
    "modelscope>=1.17",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
