[project]
name = "trustguard-rag"
version = "0.1.0"
description = "TrustGuard 独立 RAG 平台：采集 / 入库 / 混合检索 / rerank / 引用"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "SQLAlchemy[asyncio]>=2.0",
    "aiomysql>=0.2",
    "qdrant-client>=1.9",
    "opensearch-py[async]>=2.4",
    "redis>=5.0",
    "aio-pika>=9.4",
    "minio>=7.2",
    "httpx>=0.27",
    "cryptography>=42",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.9",
]

[tool.setuptools.packages.find]
include = ["app*"]

[project.optional-dependencies]
local-embedding = [
    "sentence-transformers>=3.0",
    "transformers>=4.51.0",
    "modelscope>=1.17",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "aiosqlite>=0.20",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
